# pachi

./: .gitignore  Cargo.toml  README.md  eye_config.json  eye_timeline.json
.claude/: settings.local.json
crates/eye-core/: Cargo.toml
crates/eye-core/shaders/: eye.wgsl
crates/eye-core/src/: animation.rs  config.rs  gui.rs  lib.rs  listening.rs  microsaccade.rs  nod.rs  outline.rs  renderer.rs  timeline.rs
examples/: desktop.rs
scripts/: face_tracker.py
