[package]
name = "eye"
version = "0.1.0"
edition.workspace = true

[features]
default = ["gui"]
gui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
egui-winit = { version = "0.31", optional = true }

[dev-dependencies]
winit = "0.30"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"

[[example]]
name = "desktop"
path = "../../examples/desktop.rs"
required-features = ["gui"]
